resolved some alignment issues

--- a/src/Home.css
+++ b/src/Home.css
@@ -335,7 +335,7 @@ label {
 }
 .Home_roles {
   width: 100%;
-  margin: 80px 0;
+  margin: 100px 0;
   /* height: 100vh; */
   display: flex;
   align-items: center;
@@ -389,6 +389,7 @@ label {
 @media screen and (max-width: 1150px) {
   .Home_roles {
     height: fit-content;
+    margin-top: 20px;
     margin-bottom: 100px;
   }
   .Home_roles h1 {
